Closed Bug 1322979 Opened 8 years ago Closed 8 years ago

Migrating from NS_ASSERTION to MOZ_ASSERT in dom/file

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file)

      No description provided.
Attached patch assertions.patchSplinter Review
Assignee: nobody → amarchesini
Attachment #8817973 - Flags: review?(kyle)
Attachment #8817973 - Flags: review?(kyle) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c4abe4094074
Migrating from NS_ASSERTION to MOZ_ASSERT in dom/file, r=qdot
https://hg.mozilla.org/mozilla-central/rev/c4abe4094074
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: