Bug 1322979 - Migrating from NS_ASSERTION to MOZ_ASSERT in dom/file, r=qdot