dom/file/File.h
@@ -388,8 +388,7 @@ public:
     , mLastModificationDate(INT64_MAX)
     , mSerialNumber(NextSerialNumber())
   {
-    NS_ASSERTION(aLength != UINT64_MAX,
-                 "Must know length when creating slice");
+    MOZ_ASSERT(aLength != UINT64_MAX, "Must know length when creating slice");
     // Ensure non-null mContentType by default
     mContentType.SetIsVoid(false);
   }
@@ -545,7 +544,7 @@ public:
     : BlobImplBase(aName, aContentType, aLength, aLastModifiedDate)
     , mDataOwner(new DataOwner(aMemoryBuffer, aLength))
   {
-    NS_ASSERTION(mDataOwner && mDataOwner->mData, "must have data");
+    MOZ_ASSERT(mDataOwner && mDataOwner->mData, "must have data");
   }
 
   BlobImplMemory(void* aMemoryBuffer, uint64_t aLength,
@@ -553,7 +552,7 @@ public:
     : BlobImplBase(aContentType, aLength)
     , mDataOwner(new DataOwner(aMemoryBuffer, aLength))
   {
-    NS_ASSERTION(mDataOwner && mDataOwner->mData, "must have data");
+    MOZ_ASSERT(mDataOwner && mDataOwner->mData, "must have data");
   }
 
   virtual void GetInternalStream(nsIInputStream** aStream,
@@ -620,7 +619,7 @@ private:
     : BlobImplBase(aContentType, aOther->mStart + aStart, aLength)
     , mDataOwner(aOther->mDataOwner)
   {
-    NS_ASSERTION(mDataOwner && mDataOwner->mData, "must have data");
+    MOZ_ASSERT(mDataOwner && mDataOwner->mData, "must have data");
     mImmutable = aOther->mImmutable;
   }
 
@@ -677,7 +676,7 @@ public:
     , mWholeFile(true)
     , mIsTemporary(aTemporary)
   {
-    NS_ASSERTION(mFile, "must have file");
+    MOZ_ASSERT(mFile, "must have file");
     // Lazily get the content type and size
     mContentType.SetIsVoid(true);
     mFile->GetLeafName(mName);
@@ -691,7 +690,7 @@ public:
     , mWholeFile(true)
     , mIsTemporary(false)
   {
-    NS_ASSERTION(mFile, "must have file");
+    MOZ_ASSERT(mFile, "must have file");
   }
 
   BlobImplFile(const nsAString& aName, const nsAString& aContentType,
@@ -702,7 +701,7 @@ public:
     , mWholeFile(true)
     , mIsTemporary(false)
   {
-    NS_ASSERTION(mFile, "must have file");
+    MOZ_ASSERT(mFile, "must have file");
   }
 
   // Create as a file with custom name
@@ -713,7 +712,7 @@ public:
     , mWholeFile(true)
     , mIsTemporary(false)
   {
-    NS_ASSERTION(mFile, "must have file");
+    MOZ_ASSERT(mFile, "must have file");
     if (aContentType.IsEmpty()) {
       // Lazily get the content type and size
       mContentType.SetIsVoid(true);
@@ -760,7 +759,7 @@ private:
     , mWholeFile(false)
     , mIsTemporary(false)
   {
-    NS_ASSERTION(mFile, "must have file");
+    MOZ_ASSERT(mFile, "must have file");
     mImmutable = aOther->mImmutable;
   }
 
